2000-11-12  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* User_interface/main/main.c:
	* User_interface/Include/user_interface.h:
	* Tagtoxfm/tagtoxfm.c:
	* Functionality/initialize/initialize.c:
	* Functionality/Include/register.h: Change include from "foo.h"
	to "bicpl/foo.h", to match current practice of the "bicpl"
	library (formerly known as BIC_PL).

	* configure.in: New.  Added infrastructure for autoconf-generated
	build procedure.  The subdirectories Functionality, Graphics, 
	UI_calls_F, and User_interface do not yet have automake-generated
	makefiles; they include "Makefile.include", however, which now
	*is* generated, so some of the variable definitions are generated
	there automatically.

	* common_include.h: Change include from "internal_volue_io.h" to
	"volume_io/internal_volume_io.h", to match recent MINC practice.

2000-10-07  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* tagged as release-1_3: sources copied from
	~david/Source/Register, with two files rolled back one revision,
	to match the `Display+register_src_v1.3' tarball, distributed from
	David's web page.

	* User_interface/event_callbacks/tag_events.c:	
	* User_interface/event_handling/window_events.c: rolled back to 
	version found in Display+register_src_v1.3, distributed from
	web page.
