@@ -1,10 +1,7 @@
 After checking out from CVS, you need to perform the following steps
 from the top-level source directory (i.e. the one containing this file):
 
-1. cvs -d /software/source/libraries checkout bicgl -d Graphics
-   (yes, two "-d" options --- type the line verbatim)
-
-2. ./autogen.sh
+1. ./autogen.sh
 
 You will need reasonably recent versions of autoconf and automake.
 These steps need only be done once.
